# emception

./: .gitignore  .npmignore  145.bundle.worker.js  342.bundle.worker.js  359.bundle.worker.js  960.bundle.js  Dockerfile  README.md  build-binaryen.sh  build-brotli.sh  build-cpython.sh  build-emception.sh  build-llvm.sh  build-packs.sh  build-pyodide.sh  build-quicknode.sh  build-tooling.sh  build-with-docker.sh  build.sh  editor.worker.js  emception.worker.bundle.worker.js  index.html  llvm-box.d.mts  main.bundle.js  main.bundle.js.LICENSE.txt  package.json  patch-ninja.sh  patch-pyodide-build.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-wiki.yml  test.yml
box_src/: binaryen-box.cpp  llvm-box.cpp
demo/: emception.js  emception.worker.js  index.js  package-lock.json  package.json  preview-template.mjs  style.css  webpack.config.js
docker/: Dockerfile
emception-box/: CMakeLists.txt  build.sh  fetch_archive.cmake
emception-box/binaryen/: CMakeLists.txt  binaryen.patch
emception-box/boxify/: CMakeLists.txt  box.cpp  boxify.cmake  boxify.cpp
emception-box/boxify/wasm-utils/: CMakeLists.txt
emception-box/boxify/wasm-utils/include/wasm-utils/: InitFunctions.hpp  LinkingSection.hpp  Section.hpp  SymbolTable.hpp
emception-box/boxify/wasm-utils/src/: Buffer.cpp  LinkingSection.cpp  SymbolTable.cpp  WasmBuffer.cpp  WasmFile.cpp
emception-box/brotli/: CMakeLists.txt  brotli.patch
emception-box/cpython/: CMakeLists.txt  Makefile.append  cpython.patch  parallel_make.sh
emception-box/emception-box/: CMakeLists.txt
emception-box/emlib/: fsroot.js
emception-box/libarchive/: CMakeLists.txt
emception-box/llvm/: CMakeLists.txt  llvm-project.patch
emception-box/package-box/: CMakeLists.txt
emception-box/quicknode/: CMakeLists.txt
emception-box/wasm-package/: CMakeLists.txt  wasm-package.cpp
emception-box/wasm-utils/: CMakeLists.txt
emception-box/wasm-utils/include/wasm-utils/: Buffer.hpp  WasmBuffer.hpp  WasmFile.hpp  WasmIO.hpp  utils.hpp
emception-box/wasm-utils/src/: InitFunctions.cpp  Section.cpp  WasmIO.cpp  utils.cpp
packs/cpython/: package.sh  sitecustomize.py
packs/emscripten/: config  emscripten.patch  make.sh  package.sh  split_packages.js
packs/node/: make.sh  package.sh
packs/node/node/: package-lock.json  package.json  util.js
packs/node/node/support/: types.js
packs/pyodide/: make.sh  package.sh
packs/usr_bin/: make.sh  package.sh
packs/wasm/: make.sh  package.sh
packs/working/: package.sh
packs/working/working/: main.c  main.cpp
patches/: cpython.patch  llvm-project.patch  pyodide.patch
quicknode/: CMakeLists.txt  main.cpp
src/: BinaryenBoxProcess.mjs  BrotliProcess.mjs  EmProcess.mjs  FileSystem.mjs  LlvmBoxProcess.mjs  NodeProcess.mjs  Process.mjs  Python3Process.mjs  PythonProcess.mjs  SHAREDFS.mjs  Thenable.mjs  createLazyFile.mjs  index.html  utils.js
tooling/wasm-package/: compile.sh  compile_wasm.sh  wasm-package.cpp
tooling/wasm-transform/: codegen.sh  compile.sh  merge_codegen.sh  wasm-transform.cpp  wasm-transform.sh
tooling/wasm-utils/: Buffer.cpp  Buffer.hpp  InitFunctions.cpp  InitFunctions.hpp  LinkingSection.cpp  LinkingSection.hpp  Section.cpp  Section.hpp  SymbolTable.cpp  SymbolTable.hpp  WasmBuffer.cpp  WasmBuffer.hpp  WasmFile.cpp  WasmFile.hpp  WasmIO.cpp  WasmIO.hpp  utils.cpp  utils.hpp
wiki/: How-it-works.md
