add_compile_definitions(wait4=__syscall_wait4)

set(LLVM_TARGETS_TO_BUILD "WebAssembly" CACHE INTERNAL "" FORCE)
set(LLVM_ENABLE_PROJECTS "clang;lld;clang-tools-extra" CACHE INTERNAL "" FORCE)

set(LLVM_ENABLE_DUMP OFF CACHE BOOL "" FORCE)
set(LLVM_ENABLE_ASSERTIONS OFF CACHE BOOL "" FORCE)
set(LLVM_ENABLE_EXPENSIVE_CHECKS OFF CACHE BOOL "" FORCE)
set(LLVM_ENABLE_BACKTRACES OFF CACHE BOOL "" FORCE)
set(LLVM_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
set(LLVM_ENABLE_THREADS OFF CACHE BOOL "" FORCE)
set(LLVM_BUILD_LLVM_DYLIB OFF CACHE BOOL "" FORCE)
set(LLVM_INCLUDE_TESTS OFF CACHE BOOL "" FORCE)

fetch_archive("llvm/llvm-project" "d5a963ab8b40fcf7a99acd834e5f10a1a30cc2e5" llvm_ARCHIVE)

FetchContent_Declare(llvm
    URL           "${llvm_ARCHIVE}"
    PATCH_COMMAND patch -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/llvm-project.patch
    SOURCE_SUBDIR llvm
)

FetchContent_MakeAvailable(llvm)